--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "final-form": "^1.1.0",
     "functional-easing": "^1.0.8",
     "gatsby": "^1.9.119",
     "gatsby-cli": "^1.1.23",
@@ -20,9 +21,11 @@
     "moment-timezone": "^0.5.13",
     "qrcode.react": "^0.7.2",
     "qs": "^6.5.1",
+    "react-final-form": "^1.0.0",
     "react-fontawesome": "^1.6.1",
     "react-imation": "^0.5.3",
     "react-ladda": "^5.0.7",
+    "react-modal": "^3.1.4",
     "react-redux": "^5.0.6",
     "react-redux-firebase": "^1.5.0",
     "react-track": "^0.4.4",
