--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "qs": "^6.5.1",
     "react-final-form": "^1.0.0",
     "react-fontawesome": "^1.6.1",
+    "react-image-gallery": "^0.8.7",
     "react-imation": "^0.5.3",
     "react-ladda": "^5.0.7",
+    "react-masonry-component": "^6.0.2",
     "react-modal": "^3.1.4",
     "react-redux": "^5.0.6",
     "react-redux-firebase": "^1.5.0",
