--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "qs": "^6.5.1",
     "react-final-form": "^1.0.0",
     "react-fontawesome": "^1.6.1",
-    "react-image-gallery": "^0.8.7",
     "react-imation": "^0.5.3",
     "react-ladda": "^5.0.7",
     "react-masonry-component": "^6.0.2",
@@ -31,6 +30,7 @@
     "react-redux": "^5.0.6",
     "react-redux-firebase": "^1.5.0",
     "react-track": "^0.4.4",
+    "react-youtube": "^7.5.0",
     "recompose": "^0.26.0",
     "redux": "3.6.0",
     "styled-components": "^2.2.1",
