--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gatsby-plugin-favicon": "^2.0.0",
     "gatsby-plugin-google-analytics": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-source-filesystem": "^1.5.39",
     "gatsby-source-firebase": "^1.0.0",
+    "gatsby-transformer-remark": "^1.7.44",
     "halogen": "^0.2.0",
     "ityped": "^0.0.10",
     "jspdf": "^1.3.5",
