--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^4.11.0",
     "eslint-config-google": "^0.9.1",
     "eslint-config-prettier": "^2.8.0",
