--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "halogen": "^0.2.0",
     "ityped": "^0.0.10",
     "jspdf": "^1.3.5",
+    "little-loader": "^0.2.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.13",
