--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: public
-  fqdn: muniranians.com
+  fqdn: muniranians.ca
   on:
     branch: master
